Convert code to Java 21.